--- a/views/pages/sport/createForm.html
+++ b/views/pages/sport/createForm.html
@@ -4,23 +4,14 @@
         <h1>New Sport</h1>
         <form method="POST" action="<%= baseUrl + action %>">
             <div class="form-group">
-                <input
-                    id="name"
-                    name="name"
-                    placeholder="Name"
-                    type="text"
-                    class="form-control"
-                    autofocus
-                    maxlength="255"
-                    required
-                    value="<%= formData.name %>"
-                />
+                <input id="name" name="name" placeholder="Name" type="text" class="form-control" autofocus
+                    maxlength="255" required value="<%= formData.name %>" />
             </div>
-<div class="text-right">
-            <button id="submitButton" type="submit" class="btn btn-dark">
-                Add
-            </button>
-    </div>
+            <div class="text-right">
+                <button id="submitButton" type="submit" class="btn btn-dark" data-cy="submit">
+                    Add
+                </button>
+            </div>
         </form>
     </div>
 </div>
